RESOLVED FIXED120375
AX: aria-valuetext property not exposing AXValueDescription
https://bugs.webkit.org/show_bug.cgi?id=120375
Summary AX: aria-valuetext property not exposing AXValueDescription
Attachments
patch (4.30 KB, patch)
2013-09-04 11:24 PDT, chris fleizach
darin: review+
Radar WebKit Bug Importer
Comment 1 2013-08-27 14:05:24 PDT
chris fleizach
Comment 2 2013-09-04 11:24:39 PDT
chris fleizach
Comment 3 2013-09-04 12:56:25 PDT
Note You need to log in before you can comment on or make changes to this bug.