AX: aria-valuetext property not exposing AXValueDescription https://bugs.webkit.org/show_bug.cgi?id=120375

Reviewed by Darin Adler.

Source/WebCore:

Expose value based attributes for incrementor roles (which are called spinbuttons by ARIA).

Test: platform/mac/accessibility/spinbutton-valuedescription.html

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeNames]):

LayoutTests:

* platform/mac/accessibility/spinbutton-valuedescription-expected.txt: Added.
* platform/mac/accessibility/spinbutton-valuedescription.html: Added.



Canonical link: https://commits.webkit.org/138674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155059 268f45cc-cd09-0410-ab3c-d52691b4dbfc